--- a/SelahSeries/Views/Support/Bio.cshtml
+++ b/SelahSeries/Views/Support/Bio.cshtml
@@ -140,7 +140,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-4 text-center">
-                            <img src="~/NewFolder2/ministers" alt="Image" class="img-fluid">
+                            <img src="~/NewFolder2/ministers/Popoola.jpg" alt="Image" class="img-fluid">
                         </div>
                         <div class="col-lg-8">
                             <div class="site-section-heading text-center mb-5 w-border">
